--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -6,9 +6,9 @@ $secondary-color:    #1dbbd6; // Tags, Links, Main Heading, Quote Border
 $tertiary-color:     #C0392B; // Hover-over color, Active Page color
 $accent-color1:      #23defe; // Hover-over background color for tags
 $accent-color2:      #34495E; // Sub-headings, Date Stamp
-$accent-color3:      #ffffff; // Navbar Text, Tag text
+$accent-color3:      #34495E; // Navbar Text, Tag text
 $bg-color:           #ffffff; // Background
-$navbar-color:       #34495E; // Navbar
+$navbar-color:       #F8F8FF; // Navbar
 $code-bg-color:      #2C3E50; // Code background
 $quote-color:        #E74C3C; // Quote Color
 $text-color:         #5a5e5f; // Body Text
