--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -1,7 +1,7 @@
 // Customize the colors of Octoflat Here
 
 
-$primary-color:      #C0392B; // Jumbotron, Horizontal Rules, Headings
+$primary-color:      #1dbbd6; // Jumbotron, Horizontal Rules, Headings
 $secondary-color:    #1dbbd6; // Tags, Links, Main Heading, Quote Border
 $tertiary-color:     #C0392B; // Hover-over color, Active Page color
 $accent-color1:      #23defe; // Hover-over background color for tags
@@ -14,3 +14,4 @@ $quote-color:        #E74C3C; // Quote Color
 $text-color:         #5a5e5f; // Body Text
 $footer-color:       #7F8C8D; // Footer
 
+//C0392B
